syntax = "proto3";

package user;

import "google/api/annotions.proto";

message CreateUserRequest {
    string uid = 1;
    string first_name = 2;
    string last_name = 3;
}

message CreateUserResponse {
    CreateUserRequest data = 1;
    string code = 2;
    string status = 3;
    string title = 4;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post : "/api/v1/users",
            body : "*"
        };
    }
}